Added colors from designkit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="wrapper">
     <h1>Designkit Sets</h1>
     <div>
-      <span class="label-set">cpu-0 <span class="label-set-count">9</span></span>
+      <a href="#" class="set"><span class="set-label">Pens</span><span class="set-count">9</span></a>
     </div>
   </div>
 </body>
